# dutch-instruction-datasets

./: .gitignore  .transl_sysprompt_en-nl  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
data/: world-subtopics.json
src/dutch_data/: __init__.py  answer_hf.py  conceptual_fields.py  conversation_generator.py  credentials.py  querier.py  text_generator.py  translate_hf.py  utils.py
src/dutch_data/api_utils/: credentials.py
src/dutch_data/azure_utils/: __init__.py  credentials.py  multipoint_querier.py  querier.py  utils.py
src/dutch_data/dataset_processing/: __init__.py  answer_hf_dataset.py  base_processor.py  conversation_hf_dataset.py  translate_hf_dataset.py
src/dutch_data/processor/: __init__.py  answer.py  answer_hf_dataset.py  base.py  base_processor.py  conversation.py  conversation_hf_dataset.py  translate.py  translate_hf_dataset.py
src/dutch_data/scripts/: add_lid.py  aggregate_benchmark_scores.py  alignment_handbook_data.py  answer_generic.py  answer_orca_dpo_pairs.py  chat_data_prep.py  clm_data_prep.py  conversation_generic.py  download_checkpoint.py  fill_orca_dpo_pairs.py  filter_dutch.py  generate_subtopics.py  generate_ultrachat_subtopics.py  interactive_querying.py  merge_branches.py  translate_generic.py  translate_orca_dpo_pairs.py
src/dutch_data/scripts/orca_dpo_pairs/: answer_orca_dpo_pairs.py  translate_orca_dpo_pairs.py
src/dutch_data/scripts/ultra_feedback/: translate_ultra_feedback.py
src/dutch_data/text_generator/: __init__.py  azure.py  base.py  huggingface.py  openai.py  vllm.py
tests/: conftest.py  dummy-credentials.json  test_answer.py  test_azure.py  test_azure_querier.py  test_azure_text_generator.py  test_dict_to_tuple.py  test_hf_text_generator.py  test_text_generator.py  test_utils.py
