[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dutch_data"
# Do not forget to change in __init__.py too!
version = "0.0.1"
authors = [
    {name = "Bram Vanroy", email = "bramvanroy@hotmail.com"},
]
maintainers = [
    {name = "Bram Vanroy", email = "bramvanroy@hotmail.com"},
]
description = "Data creation scripts to generate Dutch instruction data"
readme = "README.md"
keywords = ["openai", "synthetic data", "data creation", "llm", "large language models", "dutch"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

requires-python = ">=3.10"
dependencies = [
    "datasets",
    "huggingface-hub",
    "openai",
    "pandas",
    "tenacity",
    "tiktoken",
    "torch",
    "tqdm",
    "transformers",
    "typer[all]",
]

[project.urls]
homepage = "https://github.com/BramVanroy/dutch-instruction-datasets"
documentation = "https://github.com/BramVanroy/dutch-instruction-datasets"
repository = "https://github.com/BramVanroy/dutch-instruction-datasets.git"

[project.optional-dependencies]
dev = ["flake8", "black", "isort", "pytest"]

[project.scripts]
translate-hf = "dutch_data.scripts.translate_generic:app"
answer-hf = "dutch_data.scripts.translate_generic:app"
translate-orcadpo = "dutch_data.scripts.orca_dpo_pairs.translate_orca_dpo_pairs:app"
answer-orcadpo = "dutch_data.scripts.orca_dpo_pairs.answer_orca_dpo_pairs:app"
translate-ultrafeedback = "dutch_data.scripts.ultra_feedback.translate_ultra_feedback:app"
interactive-query = "dutch_data.scripts.interactive_querying:app"

# TOOLS
[tool.setuptools]
include-package-data = true
license-files = ['LICEN[CS]E*']

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 119
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
ensure_newline_before_comments = true
line_length = 119
default_section = "FIRSTPARTY"
known_first_party = "dutch_data"
lines_after_imports = 2

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:tensorflow.*:",
]
testpaths = ["tests"]

# flake8 is in setup.cfg as it does not support toml:
# https://github.com/PyCQA/flake8/issues/234
