[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dutch_data"
# Do not forget to change in __init__.py too!
version = "0.0.1"
authors = [
    {name = "Bram Vanroy", email = "bramvanroy@hotmail.com"},
]
maintainers = [
    {name = "Bram Vanroy", email = "bramvanroy@hotmail.com"},
]
description = "Data creation scripts to generate Dutch instruction data"
readme = "README.md"
keywords = ["openai", "synthetic data", "data creation", "llm", "large language models", "dutch"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

requires-python = ">=3.10"
dependencies = [
    "datasets==2.16.*",
    "huggingface-hub==0.19.*",
    "openai==1.6.*",
    "pandas==2.*",
    "tenacity==8.2.*",
    "tiktoken==0.5.*",
    "torch==2.*",
    "tqdm",
    "transformers<5",
    "typer[all]<1",
    'vllm==0.2.* ; platform_system != "Windows"'  # Windows currently not supported
]

[project.urls]
homepage = "https://github.com/BramVanroy/dutch-instruction-datasets"
documentation = "https://github.com/BramVanroy/dutch-instruction-datasets"
repository = "https://github.com/BramVanroy/dutch-instruction-datasets.git"

[project.optional-dependencies]
dev = ["flake8", "black", "isort", "pytest", "pytest-lazy-fixture"]
vllm = ["requests", "vllm"]

[project.scripts]
translate-hf = "dutch_data.scripts.translate_generic:app"
answer-hf = "dutch_data.scripts.answer_generic:app"
conversation-hf = "dutch_data.scripts.conversation_generic:app"
interactive-query = "dutch_data.scripts.interactive_querying:app"

# TOOLS
[tool.setuptools]
include-package-data = true
license-files = ['LICEN[CS]E*']

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 119
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
ensure_newline_before_comments = true
line_length = 119
default_section = "FIRSTPARTY"
known_first_party = "dutch_data"
lines_after_imports = 2

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:tensorflow.*:",
]
testpaths = ["tests"]

# flake8 is in setup.cfg as it does not support toml:
# https://github.com/PyCQA/flake8/issues/234
